# Agentic-Ai

./: pyproject.toml
src/firstproject/: __init__.py  agent.py
src/recap/: __init__.py  recap.py
